Migrate to os-core-common 7.1.0